--- a/electron app/AddWindow.html
+++ b/electron app/AddWindow.html
@@ -8,7 +8,8 @@
 		<div>
 			<label>Enter slide title </label>
 			<input type="text" id="item" autofocus>
-			<label>      Enter slide index</label>
+			<div></div>
+			<label>Enter slide index</label>
 			<input type="number" id="index" autofocus>
 		</div>
 		<button type="submit">Add Slide</button>
