--- a/electron app/RemoveWindow.html
+++ b/electron app/RemoveWindow.html
@@ -7,21 +7,25 @@
 	<form>
 		<div>
 			<label>Enter slide index</label>
-			<input type="number" id="item" autofocus>
+			<input type="number" id="index" autofocus>
 		</div>
 		<button type="submit">Remove Slide</button>
 	</form>
 	<script>
+		//the form aread above the script section here is the area that the user inputs information, 
+		//then the next two things below this line are making sure that the script section has what it needs
 		const electron = require('electron');
 		const {ipcRenderer} = electron;
 		
+		//this stuff grabs the information from the for when the user hits submit
 		const form = document.querySelector('form');
-		form.addEventListener('submit',submitForm);
+		form.addEventListener('submit',submitForm);//and this uses that information to call the function below
 
+		//the function for submiting the information to the main.js file
 		function submitForm(e){
-			e.preventDefault();
-			const index = document.querySelector('#item').value;
-			ipcRenderer.send('item:remove',index);
+			e.preventDefault(); //forms by default want to save to a file, this prevents that
+			const index = document.querySelector('#index').value; //grabs the the slide index and saves it into constant item
+			ipcRenderer.send('item:remove',index);//sends the index to the main.js file, specifically ipcMain with the tag 'item:remove'
 		}
 	</script>
 </body>
