--- a/electron app/presentWindow.html
+++ b/electron app/presentWindow.html
@@ -6,9 +6,10 @@
 <body>
 	<ul></ul>
 	<script src="main.js">
+		//this is pretty empty right now, more stuff will eb added
 		const electron = require('electron');
 		const {ipcRenderer} = electron;
 		const ul = document.querySelector('ul');
-		
+
 	</script>
 </body>
