--- a/electron app/MainWindow.html
+++ b/electron app/MainWindow.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="stylesheet" type="text/css" href="MainWindow.css" media="screen">
 	<title>Name of Product Here</title>
 </head>
 <body>
-	<link rel="stylesheet" type="text/css" href="MainWindow.css" media="screen">
-	<h1>Current Slide Deck</h1>
 	<ul></ul>
-</body>
-	<script>
+	<script src="main.js">
 		//(1)add deck display
 		const electron = require('electron');
 		const {ipcRenderer} = electron;
@@ -26,14 +24,8 @@
 			ul.appendChild(li);
 		});
 	</script>
-	<!--
-		The way this should work at the end (theoretically) is
-		that every time the user adds a slide, it makes a new
-		div. There is a tutorial online for making slideshows
-		that could have some useful information about navigation, but I don't know how it applies to our
-		current/planned architecture.
-		https://www.w3schools.com/howto/howto_js_slideshow.asp
-	-->
+
+	<h1>Current Slide Deck</h1>
 	<div class="slide">
 		<h1 class="slide-title">This is a slide</h2>
 		<p class="slide-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus iaculis orci vel ipsum sagittis, et laoreet dui pretium. Donec eget velit sapien. Aenean condimentum, urna ac mollis elementum, tellus justo ultrices tortor, id placerat urna nunc quis urna. Nulla enim diam, condimentum et sapien quis, blandit ornare erat. Maecenas a tortor auctor lorem ullamcorper facilisis eu eget lorem. Curabitur est sem, varius eu arcu sit amet, viverra mollis turpis. Fusce in purus quam. Ut pulvinar turpis et malesuada condimentum. Nulla nisi libero, lacinia quis dui a, dictum euismod libero. Duis metus neque, posuere non nibh a, facilisis facilisis risus. Nam dui augue, pharetra a dolor placerat, euismod aliquam augue.</p>
@@ -45,4 +37,15 @@
 
 		<p class="slide-text">Vivamus non faucibus tortor. Aenean congue accumsan neque, vel varius arcu lobortis sit amet. Donec ullamcorper iaculis sem a efficitur. Phasellus rutrum et justo at sollicitudin. Sed euismod placerat ipsum ac ultrices. Vivamus sagittis fringilla blandit. Curabitur suscipit dolor dolor, ut efficitur velit posuere sit amet. Suspendisse potenti.</p>
 	</div>
+</body>
+	
+	<!--
+		The way this should work at the end (theoretically) is
+		that every time the user adds a slide, it makes a new
+		div. There is a tutorial online for making slideshows
+		that could have some useful information about navigation, but I don't know how it applies to our
+		current/planned architecture.
+		https://www.w3schools.com/howto/howto_js_slideshow.asp
+	-->
+	
 </html>
