--- a/electron app/AddWindow.html
+++ b/electron app/AddWindow.html
@@ -6,11 +6,25 @@
 <body>
 	<form>
 		<div>
-			<label>Enter slide title </label>
-			<input type="text" id="item" autofocus>
-			<div></div>
-			<label>Enter slide index</label>
-			<input type="number" id="index" autofocus>
+			<label>Enter slide title </label><br>
+			<input type="text" id="item" autofocus><br>
+			<label>Enter slide index </label><br>
+			<input type="number" id="index"><br>
+			<input type="radio" id="codeOrNo" name="codeOrNo" value="yes">Slide is code based<br>
+			<input type="radio" id="codeOrNo" name="codeOrNo" value="not">Slide is not code based<br>
+			If code based please choose a language<br>
+			<input type="text" list="languages"/>
+			<datalist id="languages">
+				<option>C</option>
+				<option>C#</option>
+				<option>C++</option>
+				<option>CSS</option>
+				<option>Fortran</option>
+				<option>HTML</option>
+				<option>Java</option>
+				<option>Javascript</option>
+				<option>Python</option>
+			</datalist>
 		</div>
 		<button type="submit">Add Slide</button>
 	</form>
@@ -28,8 +42,10 @@
 		function submitForm(e){
 			e.preventDefault(); //forms by default want to save to a file, this prevents that
 			const item = document.querySelector('#item').value; //grabs the the slide title and saves it into constant item
-			const index = document.querySelector('#index').value; //grabs the slide index and saves it into constant index
-			ipcRenderer.send('item:add',item,index); //sends the item and index to the main.js file, specifically ipcMain with the tag 'item:add'
+			const index = document.querySelector('#index').value;
+			const codeOrNo = document.querySelector('input[name = "codeOrNo"]:checked').value;
+			const language = document.querySelector('#languages').value;
+			ipcRenderer.send('item:add',item,index,codeOrNo,language); //sends the item and index to the main.js file, specifically ipcMain with the tag 'item:add'
 		}
 	</script>
 </body>
