--- a/electron app/presentWindow.html
+++ b/electron app/presentWindow.html
@@ -33,7 +33,7 @@
 
 			//populate the text
 			itemTitle.append(item[0]);
-			itemText.append("Click here to edit text");
+			itemText.append(item[2]);
 
 			//add them to the slide
 			newSlide.appendChild(itemTitle);
